test/libsolidity/syntaxTests/denominations/two_denominations_same_literal.sol
contract C {
	uint constant y = 8 gwei ether;
}
// ----
// ParserError 2314: (39-44): Expected ';' but got 'ether'
